# quiz-copilot

./: .gitignore  AGENTS.md  README.md
backend/: .dockerignore  .env.example  DEV_GUIDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start_backend.sh
backend/app/api/: study.py
backend/docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
backend/src/app/: db.py  dependencies.py  main.py
backend/src/app/api/: auth.py  banks.py  questions.py  smart_practice.py  study.py
backend/src/app/core/: config.py  security.py
backend/src/app/models/: db_models.py  schemas.py
backend/src/app/services/: ai_service.py  ai_stub.py  batch_importer.py  in_memory_store.py  in_memory_store_old.py  smart_practice_service.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_study_normalize.py
backend/utils/: README.md  analyze_question_banks.py  del_csv.py  fill_missing_analysis.py  fill_missing_analysis_db.py  filter_questions_by_ai.py  fix_blank_to_short_answer.py  fix_x_v_judgment.py  import_issue_log.py  import_question_bank.py  import_question_bank_zai.py  question_bank_tool.py  scan_banks.py  test_zai.py
docs/: 00_Master_Plan.md  01_Database_Design.md  02_Backend_Architecture.md  03_Frontend_Architecture.md  04_AI_Integration.md  PROJECT_OVERVIEW.md  bug_report_smart_practice_state_loss.md  question_bank_analysis.md
docs/progress/: progress_log.md
uni-app/: App.vue  README.md  manifest.json  pages.json  uni.scss
uni-app/pages/editor/: add.vue
uni-app/pages/quiz/: index.vue  (+2 more)
uni-app/services/: api.js  theme.js
(+7 files in other folders)
