[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlmodel",
    "psycopg[binary]",
    "pytest>=9.0.1",
    "httpx>=0.28.1",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart>=0.0.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
